Use Path.of over Paths.get